--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@supersoccer/path",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "repository": "https://github.com/supersoccer/node-path.git",
   "author": "Argi Karunia",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "doc": "jsdoc -c jsdoc.json"
+  },
+  "devDependencies": {
+    "@supersoccer/minako": "*",
+    "jsdoc": "^3.5.5"
+  }
 }
